--- a/LMNOPsite/lmn/templates/lmn/base.html
+++ b/LMNOPsite/lmn/templates/lmn/base.html
@@ -2,10 +2,13 @@
 <html>
 <head>
   <title>LMNOP</title>
-  <link rel="stylesheet" href='{% static 'css/base_style.css' %}'></link>
+    <script src="{% static 'jquery-3.2.0.min.js' %}"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="{% static 'css/base_style.css' %}">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 
-<body>
+<body id="bootstrap-override">
 
 <h1>LMN</h1>
 
