--- a/LMNOPsite/lmn/templates/lmn/notes/new_note.html
+++ b/LMNOPsite/lmn/templates/lmn/notes/new_note.html
@@ -6,7 +6,7 @@
 <form method="POST" action="{% url 'lmn:new_note' show_pk=show.pk %}">{% csrf_token %}
   {{ form.as_p }}
   <P>
-  <input type='submit' value='Add Note'>
+  <input type='submit' value='Submit Note'>
 </form>
 
 {% endblock %}
