Debugging note edit

--- a/LMNOPsite/lmn/templates/lmn/notes/note_list.html
+++ b/LMNOPsite/lmn/templates/lmn/notes/note_list.html
@@ -17,6 +17,7 @@
   <P class="note_info">Posted on {{ note.posted_date }} by <a class='user' href="{% url 'lmn:user_profile' user_pk=note.user.pk %}">{{ note.user.username }}</a></p>
   <p class='note_text'>{{ note.text|truncatechars:100 }}</p>
   <hr>
+</div>
 
 {% empty %}
 
