Add edit, delete button functionality

--- a/LMNOPsite/lmn/templates/lmn/users/user_profile.html
+++ b/LMNOPsite/lmn/templates/lmn/users/user_profile.html
@@ -12,10 +12,11 @@ Text truncated to 200 characters. -->
 {% for note in notes %}
 
 <div class='note' id="note_{{ note.pk }}">
-  <h3 class="note_title"><a href="{% url 'lmn:note_detail' note_pk=note.pk %}">{{ note.title }}</a></h3>
-  <P class="note_info">{{ note.show.artist.name }} at {{ note.show.venue.name }} on {{ note.show.show_date }}</P>
-  <p class="note_text">{{ note.text|truncatechars:300}}</p>
-  <p class="note_posted_at">{{ note.posted_date}}</p>
+    <h3 class="note_title"><a href="{% url 'lmn:note_detail' note_pk=note.pk %}">{{ note.title }}</a>
+    <a id="note_delete" href="{% url 'lmn:note_delete' note_pk=note.pk %}"><span class="glyphicon glyphicon-remove"></span></a></h3>
+    <P class="note_info">{{ note.show.artist.name }} at {{ note.show.venue.name }} on {{ note.show.show_date }}</P>
+    <p class="note_text">{{ note.text|truncatechars:300}}</p>
+    <p class="note_posted_at">{{ note.posted_date}}</p>
 </div>
 
 {% empty %}
